Crash when dragging something from a XWayland window over a Wayland one
When trying to drag something from a XWayland window (e.g. selected text from a X11 Qt5 app) over a Wayland window, this results in a crash. This crash happens in data_offer_receive()
-> display_from_offer()
-> meta_wayland_compositor_get_context()
due to compositor
being NULL
. The compositor
here comes from the data source via create_and_send_dnd_offer()
, but MetaWaylandDataSourceXWayland
never sets a compositor. MetaWaylandDataSource
however does via meta_wayland_data_source_new()
, so DND works between two Wayland windows.
This issue seems to have been introduced in 44 via !2718 (merged).